<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">TimeIsGold</string>
<string name="stop_watch">Stop Watch</string>
<string name="record">Record</string>
<string name="target">Target</string>
<string name="settings">Settings</string>
<string name="reset_record">Reset</string>
<string name="start_record">Start</string>
<string name="stop_record">Stop</string>
<string name="save_record">Save</string>
<string name="cancel">Cancel</string>
<string name="date">date</string>
<string name="save">save</string>
<string name="item">item</string>
<string name="start_time">start time</string>
<string name="end_time">end time</string>
<string name="duration_time">time</string>
<string name="target_time">target time</string>
<string name="memo">memo</string>
<string name="add_item">add item</string>
<string name="add">add</string>
<string name="app_settings">Application settings</string>
<string name="language">Language</string>
<string name="theme">theme</string>
<string name="item_settings">Item settings</string>
<string name="light_theme">Light</string>
<string name="dark_theme">Dark</string>
<string name="remove">remove</string>
<string name="change">change</string>
<string name="tip">Tips</string>
<string name="app_information">Application information</string>
<string name="app_version">Application Version</string>
<string name="theme_choice">Click on the theme you want</string>
<string name="ok">OK</string>
<string name="today_record">Today\'s record</string>
<string name="item_record">Record by item</string>
<string name="latest_date">Latest date</string>
<string name="hour_date">Hour/Date</string>
<string name="add_remove">Remove</string>
<string name="close">Close</string>
<string name="current_version">1.0</string>
<string name="notification">No saved data</string>
<string name="tip_memo">
        - This app can measure and record time.
        \n\n- The saved time is recorded (2nd tap from the left), and a graph is drawn with the recorded time (3rd tap from the left).
        \n\n- The \'item\' used when recording can be added when saving record, and can be deleted from the Settings tab (4th tab from the left).
        \n\n- Items and records are separate part, if an item is deleted, the record is not deleted.
        \n\n- To delete a record, in the second tab from the left, press the record message for 2seconds when you want to delete record, The message asks for retain or not.

        \n\n\n- Thank you for downloading and using this app.
    </string>
</resources>