<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/tip" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/tip_memo"
        android:textColor="@color/my_text_color"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent" />


        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:text="@string/close"
            android:background="@drawable/gray_box"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:layout_height="40dp" />



</LinearLayout>