<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:padding="20dp"
    android:layout_height="250dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/target_time" />

    <NumberPicker
        android:id="@+id/hour_number_picker"
        android:layout_width="wrap_content"
        android:layout_gravity="start|center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text=":" />

    <NumberPicker
        android:id="@+id/min_number_picker"
        android:layout_width="wrap_content"
        android:layout_gravity="end|center"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="70dp"
        android:text="@string/cancel"
        android:layout_gravity="start|bottom"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="70dp"
        android:text="@string/ok"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content" />
</FrameLayout>