<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/add_item" />

    <EditText
        android:id="@+id/item_edit_text"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/gray_box"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:layout_height="40dp" />


        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/gray_box"
            android:text="@string/add"
            android:layout_marginStart="10dp"
            android:layout_height="40dp" />

    </LinearLayout>

</LinearLayout>